:sparkles: adding tabs and switching between them works fixed some styling issues when too many tabs are open fixed styling inconsistencies between header and main content of the app (overflow issue)

--- a/src/components/TabBar/Tab/Tab.scss
+++ b/src/components/TabBar/Tab/Tab.scss
@@ -11,9 +11,11 @@
   -webkit-app-region: no-drag;
   padding: 0 0.4em;
   user-select: none;
+  flex-shrink: 0;
 
   &[id] {
     font-size: 0.9rem;
+    min-width: max-content;
   }
 
   &:hover {
